--- a/PromethionGenDev_Test4_13062022/scripts/pipeline_0617.config
+++ b/PromethionGenDev_Test4_13062022/scripts/pipeline_0617.config
@@ -14,10 +14,43 @@ GUPPY=$BASE/guppy
 
 FASTQ=$BASE/$SAMPLE.fastq.gz
 
-##### mapping #####
+##### 2 MAPPING #####
 #minimap2
 minimap2='/home/euphrasie/bioprog/minimap2/minimap2' 
 
+MMI=$BASE/mmi
+BAM=$MMI/${SAMPLE}_mmi.bam
+
+##### 3 VC #####
+##### 3.1 SV #####
+
+# sniffles
+TRF38="/home/euphrasie/Documents/lr_test3/sniffles/human_GRCh38_no_alt_analysis_set.trf.bed"
+
+##### 3.2 SMALL VARIANTS ##### 
+
+# pmdv 
+
+# Set up PMDV output directory
+OUTPUT_DIR="${BASE}/vc/pmdv"
+PMDV_PREFIX="${SAMPLE}_pmdv"
 
 
 
+##### annotations #####
+ANNOT_DIR=${BASE}/annots
+
+# vt
+vt='/home/euphrasie/bioprog/vt/vt'
+
+# vep
+UTRannotator_DIR='/home/euphrasie/.vep/Plugins/UTRannotator/uORF_5UTR_GRCh38_PUBLIC.txt'
+SpliceAI_SNV='/home/jburatti/Tools/Annotations/spliceai/genome_scores_v1.3/spliceai_scores.raw.snv.hg38.vcf.gz'
+indel_DIR='/home/jburatti/Tools/Annotations/spliceai/genome_scores_v1.3/spliceai_scores.raw.indel.hg38.vcf.gz'
+REVEL_grch38='/home/jburatti/Tools/Annotations/revel/new_tabbed_revel_grch38.tsv.gz'
+CADD1='/media/jburatti/Data2/CADD_1.6_hg38/whole_genome_SNVs.tsv.gz'
+CADD2='/media/jburatti/Data2/CADD_1.6_hg38/gnomad.genomes.r3.0.indel.tsv.gz'
+
+CUSTOMPY='/media/euphrasie/Alienware_May202/scripts/pipelines/custom_annotations_after_vep_chr.py'
+
+TOXLSX='/media/euphrasie/Alienware_May202/scripts/pipelines/custom_annotations_after_vep_chr.py'
